@@ -3,9 +3,14 @@
 	* Changes (C API)
 	
 		- OCI_Cleanup() now returns FALSE if OCI_Initialize() has not been called
-		- OCI_Execute() and related methods return now FALSE and report an OCI_Error for PL/SQL statements raising PL/SQL no_data_found exceptions
 		- OCI_GetSQLVerb() handles some new verbs added with Oracle 21c
-		
+		- OCI_Execute() and related methods return now FALSE and report an OCI_Error for PL/SQL statements raising PL/SQL no_data_found exceptions
+			* This revert behavior introduced in v4.3.1 for addressing issue#68
+			* Motivation is to re-align on SQL*Plus behavior
+		- OCI_GetOCIRuntimeVersion() and OCI_GetOCICompileVersion() returned integer values on 6 digits instead of 4 digits
+			* Handles now  minor version using 2 digits (e.g. Oracle OCI version 19.16.0)
+			* Use macros OCI_VER_MAJ, OCI_VER_MIN, OCI_VER_REV and OCI_VER_MAKE to do computations on versions
+			
     * Fixes (C API)
 
 		- Issue 297: Library compilation fails with MSVC 2022 version 17.2 (error C2220)
